website/websites/u64q/code/revcomp.4.shedskin.log

Wed, 21 Dec 2016 15:06:35 GMT

MAKE:
make[1]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp“
cp revcomp.shedskin-4.shedskin shed.py
shedskin shed.py
*** SHED SKIN Python-to-C++ Compiler 0.9.4 ***
Copyright 2005-2011 Mark Dufour; License GNU GPL version 3 (See LICENSE)

[analyzing types..]
0% ****************50% ****************50% ********************************100%
[generating c++ code..]
*WARNING* shed.py:11: Function show not called!
*WARNING* shed.py:26: class 'file' has no method 'detach'
*WARNING* shed.py:26: expression has no type
[elapsed time: 1.69 seconds]
make
make[2]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp“
g++  -O2 -march=native -Wno-deprecated  -I. -I/usr/lib/python2.7/site-packages/shedskin/lib /home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp/shed.cpp /usr/lib/python2.7/site-packages/shedskin/lib/sys.cpp /usr/lib/python2.7/site-packages/shedskin/lib/re.cpp /usr/lib/python2.7/site-packages/shedskin/lib/builtin.cpp -lgc -lpcre  -o shed
/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp/shed.cpp: In function ‘void* __shed__::__ss_main()’:
/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp/shed.cpp:44:50: error: ‘class __shedskin__::file’ has no member named ‘detach’
     __sys__::__ss_stdin = (__sys__::__ss_stdin)->detach();
                                                  ^~~~~~
/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp/shed.cpp:48:50: error: ‘show’ was not declared in this scope
         show(seq, default_0, default_1, default_2);
                                                  ^
make[2]: *** [Makefile:19: shed] Chyba 1
make[2]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp“
make[1]: *** [/home/dundee/workspace/benchmarksgame/bencher/makefiles/my.linux.Makefile:30: revcomp.shedskin-4.shedskin_run] Chyba 2
make[1]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp“
9.53s to complete and log all make actions

COMMAND LINE:
./shed 0 < revcomp-input1000.txt

MAKE ERROR 

